Fixed icon alignment issue. - We only want to right-align "exclude" icons, not "OR" checkboxes.

--- a/themes/bootstrap3/less/components/sidebar.less
+++ b/themes/bootstrap3/less/components/sidebar.less
@@ -119,13 +119,13 @@
 }
 
 .full-facet-list { margin-top: 1rem; }
-.full-facet-list .active .fa {
+.full-facet-list .active .fa.fa-times {
   float: right;
   margin-top: .25rem;
   margin-right: 0.5rem;
   margin-left: 0.5rem;
 }
-body.rtl .full-facet-list .active .fa { float: left; }
+body.rtl .full-facet-list .active .fa.fa-times { float: left; }
 
 .jstree-node {
   .facet {
